# EditTimeReport

./: EditTimeReport.cabal  Html.hs  README  Report.hs  ReportGenerator.hs  StatOptions.hs  Stats.hs  TODO
daemon/: setup.py  timechart  timechartd.py
daemon/basicliser/: __init__.py
daemon/basicliser/client/: AbstractClientProtocol.py  ClientProtocol.py  __init__.py
daemon/basicliser/server/: AbstractServerProtocol.py  ServerProtocol.py  Users.py  __init__.py
daemon/basicliser/shared/: AbstractDataParser.py  AbstractLogListener.py  CallMap.py  CliLogListener.py  ConfigurationParser.py  LogListener.py  LogNotify.py  __init__.py  plainTextDataParser.py
doc/: report.1
hdaemon/: Daemon.hs
report/: Calendar.hs  Daemon.hs  EditTimeReport.cabal  Edits.hs  Html.hs  HtmlPrinter.hs  Main.hs  Printers.hs  Query.hs  QueryAST.hs  QueryLexer.x  QueryParser.y  Report.cabal  Report.hs  StatOptions.hs  Stats.hs  report.cabal
scripts/: editlog  timechart
src/: ASTtoQuery.hs  Daemon.hs  EditTimeReport.cabal  Edits.hs  Main.hs  Printers.hs  Query.hs  QueryAST.hs  QueryLexer.x  QueryParser.y  Stats.hs
